<resources>
    <string name="app_name">PopularMovies</string>
    <string name="most_popular" translatable="true">Most Popular</string>
    <string name="highest_rated" translatable="true">Highest Rated</string>

    <string name="failed_load_data" translatable="true">Failed Load Data!</string>
    <string name="release_date" translatable="true">Release Date</string>
    <string name="vote_average" translatable="true">Vote Average</string>
    <string name="synopsis" translatable="true">SYNOPSIS</string>
    <string name="favorites" translatable="true">Favorites</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
</resources>
