<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/head_bar"
        android:background="@color/colorPrimary"
        android:padding="8dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/poster"
            android:layout_weight="0.3"
            android:scaleType="fitCenter"
            android:layout_width="0dp"
            android:layout_height="120dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_marginTop="5dp"
                android:text="@string/release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/releaseDate"
                android:textColor="@color/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/vote_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/rating"
                android:textColor="@color/icons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:textSize="18sp"
        android:textColor="@color/primary_text"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/synopsis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/synopsis"
        android:textSize="16sp"
        android:textColor="@color/primary_text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/icons"
            android:text="@string/trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:background="@color/backReview"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:visibility="gone"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:textColor="@color/primary_text"
            android:text="@string/reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>